--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.2.0",
+    "react-router-dom": "^7.3.0",
     "tailwindcss": "^4.0.9"
   },
   "devDependencies": {
