--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.24.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router": "^7.2.0",
     "react-router-dom": "^7.3.0",
     "tailwindcss": "^4.0.9"
